--- a/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
+++ b/MM Systems/PanoramaApp3/WcfService/Wcf/Wcf.csproj
@@ -96,6 +96,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClasses.dbml</DependentUpon>
     </Compile>
+    <Compile Include="GrafiekData.cs" />
     <Compile Include="IService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.svc.cs">
