--- a/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
@@ -186,6 +186,9 @@
     <None Include="Service References\ServiceReference\PanoramaApp3.ServiceReference.Activities.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Service References\ServiceReference\PanoramaApp3.ServiceReference.GrafiekData.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\ServiceReference\PanoramaApp3.ServiceReference.Tbl_Categorien.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
