--- a/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
+++ b/MM Systems/PanoramaApp3/PanoramaApp3/PanoramaApp3.csproj
@@ -116,7 +116,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\User.cs" />
-    <Compile Include="Service References\ServiceReference1\Reference.cs">
+    <Compile Include="Service References\ServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -183,36 +183,6 @@
     <Content Include="ApplicationLogo.png" />
     <Content Include="MSLogo2.png" />
     <Content Include="ReadMe.Coding4Fun.Toolkit.txt" />
-<<<<<<< HEAD
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.Activities.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.GrafiekData.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.Tbl_Categorien.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.Tbl_GebruikersIngave.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.Tbl_Schaal_Nachtrust.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.Tbl_User.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.Tbl_Weersomstandigheden.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\PanoramaApp3.ServiceReference1.User.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\ServiceReference1\Service.disco" />
-    <None Include="Service References\ServiceReference1\configuration91.svcinfo" />
-    <None Include="Service References\ServiceReference1\configuration.svcinfo" />
-    <None Include="Service References\ServiceReference1\Reference.svcmap">
-=======
     <None Include="Service References\ServiceReference\PanoramaApp3.ServiceReference.Activities.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -241,19 +211,18 @@
     <None Include="Service References\ServiceReference\configuration91.svcinfo" />
     <None Include="Service References\ServiceReference\configuration.svcinfo" />
     <None Include="Service References\ServiceReference\Reference.svcmap">
->>>>>>> 6ebdcc4ddfb0b180c8485fb28ddf566a4dfc1330
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <Content Include="ServiceReferences.ClientConfig" />
-    <None Include="Service References\ServiceReference1\Service.wsdl" />
-    <None Include="Service References\ServiceReference1\Service.xsd">
+    <None Include="Service References\ServiceReference\Service.wsdl" />
+    <None Include="Service References\ServiceReference\Service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceReference1\Service1.xsd">
+    <None Include="Service References\ServiceReference\Service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceReference1\Service2.xsd">
+    <None Include="Service References\ServiceReference\Service2.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -269,16 +238,20 @@
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\CheckUserInput\CheckUserInput.csproj">
+      <Project>{3804942A-808F-411C-BA89-4562F06114D6}</Project>
+      <Name>CheckUserInput</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PasswordHashGen\PasswordHashGen.csproj">
       <Project>{A753DB32-277F-4F28-AF27-A39413BD9CA8}</Project>
       <Name>PasswordHashGen</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\ServiceReference1\" />
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceReference\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
